fix: scrollbar error on codeblock

--- a/css/noscript.css
+++ b/css/noscript.css
@@ -92,7 +92,6 @@ main .codeblock pre code {
 	margin-left: -15.4rem;
 	overflow: auto;
 	padding-right: 1em;
-	margin-bottom: -.5rem;
 }
 
 /* Visually normalize codeblocks' extra tabs. */
